objects/Campaign.object
<CustomObject><fields>
        <fullName>Data_Quality_Description__c</fullName>
        <formula>IF( Data_Quality_Score__c =100,"All Campaign Details Captured", "Missing: "&amp;IF( LEN( Name)&lt;5,"Meaningful Campaign Name, ","")&amp;""&amp;IF(ISPICKVAL( Type ,""), "Type, ","")&amp;""&amp;IF( ISPICKVAL( Status ,""), "Status, ","")&amp;""&amp;IF( LEN(TEXT(MONTH( StartDate )))=0, "Start Date, ","")&amp;""&amp;IF( LEN(TEXT(MONTH( EndDate )))=0, "End Date, ","")&amp;""&amp;IF(NumberOfContacts  +  NumberOfLeads = 0, "No Associated Members, ","")&amp;""&amp;IF( LEN(TEXT( ExpectedRevenue ))=0, "Expected Revenue",""))</formula>
        <label>Data Quality Description</label>
        <type>Text</type>
    </fields><fields>
        <fullName>Data_Quality_Score__c</fullName>
        <formula>IF(LEN(  Name  ) &lt; 5, 0,20) + IF(ISPICKVAL(  Type ,"" ), 0,20) + IF(ISPICKVAL( Status ,"" ), 0,20) + IF(LEN( TEXT(MONTH( StartDate )))= 0, 0,10) + IF( LEN(TEXT(MONTH( EndDate ))) = 0, 0,10) + IF(  NumberOfContacts  +  NumberOfLeads = 0, 0,10)  + IF( LEN( TEXT( ExpectedRevenue ) ) = 0, 0,10)</formula>
        <label>Data Quality Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields><fields>
        <fullName>Delivery_Subtype__c</fullName>
        <label>Delivery Subtype</label>
        <picklist>
            <controllingField>Delivery_Type__c</controllingField>
            <picklistValues>
                <fullName>Candidate website</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Facebook</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mass mailing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other website</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Targeted mailing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Twitter</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields><fields>
        <fullName>Delivery_Type__c</fullName>
        <label>Delivery Type</label>
        <picklist>
            <picklistValues>
                <fullName>Email</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mail</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Web</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields><fields>
        <fullName>Donation__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Donation</label>
        <referenceTo>Donation__c</referenceTo>
        <relationshipLabel>Campaigns</relationshipLabel>
        <relationshipName>Campaigns</relationshipName>
        <type>Lookup</type>
    </fields><compactLayoutAssignment>SYSTEM</compactLayoutAssignment><enableFeeds>false</enableFeeds><enableHistory>false</enableHistory><sharingModel>FullAccess</sharingModel><listViews>
        <fullName>AllActiveCampaigns</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CAMPAIGN.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>All Active Campaigns</label>
    </listViews><listViews>
        <fullName>MyActiveCampaigns</fullName>
        <filterScope>Mine</filterScope>
        <filters>
            <field>CAMPAIGN.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>My Active Campaigns</label>
    </listViews></CustomObject>